--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
         with:  # 自定义环境变量
           BRANCH: pages # 这个是存放打包后的分支，需要替换成你的
           FOLDER: dist # 默认vue项目打包输出目录是dist, 一般不用改
-          REPOSITORY_NAME: zhouziyang11/Rarity-TRX # 这是我的 github page 仓库，需要替换成你的
+          REPOSITORY_NAME: Rarity-TRX/pages # 这是我的 github page 仓库，需要替换成你的
           TARGET_FOLDER: / # 打包的文件将放到静态服务器 / 目录下, 一般不用改
